# pan-os-syslog

./: .gitignore  CHANGELOG.md  README.md  cabal.project  pan-os-syslog.cabal
app/: Main.hs
bench/: Main.hs
common/: Sample.hs
scripts/: validate.hs
src/Panos/: Syslog.hs
src/Panos/Syslog/: Correlation.hs  GlobalProtect.hs  System.hs  Threat.hs  Traffic.hs  Unsafe.hs  User.hs
src/Panos/Syslog/Internal/: Common.hs  Correlation.hs  GlobalProtect.hs  System.hs  Threat.hs  Traffic.hs  User.hs
test/: Main.hs
