cabal-version: 2.2
name: pan-os-syslog
version: 0.1.0.0
synopsis: Parse syslog traffic from PAN-OS
description:
  Parse syslog traffic from PAN-OS. The data types in this library
  are optimized for decoding logs, not for creating them. On consumer-grade
  hardware, the benchmark suite demonstrates that 500-byte traffic logs are
  parsed in under one microsecond. Contribution are welcome. This
  project's goals are:
  .
  * Support as many PAN-OS syslog types as possible: traffic,
    threat, hip-match, etc.
  .
  * Support as many versions of PAN-OS as possible: 8.0, 8.1, 9.0, etc.
homepage: https://github.com/layer-3-communications/palo-alto-syslog
bug-reports: https://github.com/layer-3-communications/palo-alto-syslog/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2019 Layer 3 Communications
category: Network
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Panos.Syslog
    Panos.Syslog.Traffic
    Panos.Syslog.Unsafe
  build-depends:
    , base >=4.12.0.0 && <5
    , byteslice >=0.1.1 && <0.2
    , bytesmith >=0.1 && <0.2
    , chronos >=1.0.6 && <1.1
    , ip >=1.5.0 && <1.6
    , primitive >=0.7 && <0.8
    , primitive-addr >=0.1.0.2 && <2
  hs-source-dirs: src
  ghc-options: -Wall -O2 -ddump-simpl -ddump-to-file -dsuppress-all
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test, common
  main-is: Main.hs
  other-modules:
    Sample
  build-depends:
    , base
    , pan-os-syslog
    , primitive
    , byteslice
  ghc-options: -Wall -O2
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Sample
  hs-source-dirs:
      bench
    , common
  build-depends:
    , base
    , gauge
    , primitive
    , pan-os-syslog
  ghc-options: -O2 -Wall
  default-language: Haskell2010

source-repository head
  type: git
  location: git://github.com/layer-3-communications/pan-os-syslog.git
